--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -158,5 +158,5 @@ gitalk:
     owner: 068089dy # 你的 github 用户名
     repo: 068089dy.github.io # 保存评论的 repo 库
     admin: ['068089dy'] # 管理员，你的 github 用户名
-    clientID: 
-    clientSecret: 
+    clientID: 000
+    clientSecret: 000
