--- a/themes/cactus/_config-bak.yml
+++ b/themes/cactus/_config-bak.yml
@@ -16,6 +16,7 @@ direction: ltr
 nav:
   home: /
   about: /about/
+  search: /search/
   articles: /archives/
   Friends: /friends/
   # projects: projects_url
