--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-feed": "^2.1.0",
     "hexo-generator-index": "^1.0.0",
+    "hexo-generator-search": "^2.4.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-inject": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
